header section structure completed

--- a/index.html
+++ b/index.html
@@ -19,9 +19,17 @@
   <div class="container">
     <!--header section start-->
     <header>
-      
+      <!-- header wrapper start -->
+      <div class="wrapper">
+        <h1>
+          <a href="index.html" title="Home">
+            Birthday Cal
+          </a>
+        </h1>
+      </div>
+      <!-- header wrapper end-->
     </header>
-    <!--header section start-->
+    <!--header section end-->
     <!--main section start-->
     <main>
 
