main section structure completed

--- a/index.html
+++ b/index.html
@@ -32,10 +32,64 @@
     <!--header section end-->
     <!--main section start-->
     <main>
-
+      <!-- birthday calender section start -->
+      <div class="birthday-calender">
+        <!-- wrapper start -->
+        <div class="wrapper">
+          <ul class="days">
+            <li>
+              <h3>Mon</h3>
+              <ul class="mon"></ul>
+            </li>
+            <li>
+              <h3>Tue</h3>
+              <ul class="tue"></ul>
+            </li>
+            <li>
+              <h3>Wed</h3>
+              <ul class="wed"></ul>
+            </li>
+            <li>
+              <h3>Thu</h3>
+              <ul class="thu"></ul>
+            </li>
+            <li>
+              <h3>fri</h3>
+              <ul class="fri"></ul>
+            </li>
+            <li>
+              <h3>sat</h3>
+              <ul class="sat"></ul>
+            </li>
+            <li>
+              <h3>sun</h3>
+              <ul class="sun"></ul>
+            </li>
+          </ul>
+          <div>
+            <div class="form-group">
+              <textarea></textarea>
+            </div>
+            <div class="form-container">
+              <form class="form" action="#FIXME" method="post">
+                <div class="form-group">
+                  <label>Year</label>
+                  <input type="text" name="year" class="year" maxlength="4">
+                  <span class="error">Please enter valid Year</span>
+                </div>
+                <div class="form-control">
+                  <input type="submit" name="update" class="update" value="Update">
+                  <span class="success">sucessfully submitted.Check birthday calender</span>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+        <!-- wrapper end -->
+      </div>
+      <!-- birthday calender section  end -->
     </main>
     <!--main section end-->
-
     <!--footer section start-->
     <footer>      
 
