--- a/index.html
+++ b/index.html
@@ -91,11 +91,14 @@
     </main>
     <!--main section end-->
     <!--footer section start-->
-    <footer>      
-
+    <footer>
+      <div class="wrapper">
+        <p>
+          &copy;2020 birthdaycal, all rights reserved.
+        </p>
+      </div>
     </footer>
     <!--footer section end-->
-
   </div>
   <!--container end-->
   <script src="assets/js/script.js"></script>
