--- a/index.html
+++ b/index.html
@@ -93,9 +93,7 @@
     <!--footer section start-->
     <footer>
       <div class="wrapper">
-        <p>
-          &copy;2020 birthdaycal, all rights reserved.
-        </p>
+        <p>&copy;2020 Eventcalendar, all rights reserved.</p>
       </div>
     </footer>
     <!--footer section end-->
